<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:scrollbarSize="15sp"
    android:scrollbarDefaultDelayBeforeFade="5"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"

    tools:context=".Lower_back_ailment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Treatment_details">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30dp"
                android:text="@string/app_name"

                android:id="@+id/textView2"
                android:textColor="#E0780F"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_add_24"/>



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_bg">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                app:srcCompat="@drawable/ic_baseline_menu_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="330dp"
                android:textSize="22dp"
                android:gravity="fill_vertical"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:text="@string/welcome_msg" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="@string/top_msg" />
        <TextView
            android:id="@+id/txt_treatment_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/treatment_duration" />

        <EditText
            android:id="@+id/treatment_duration"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:background="@drawable/rect_ip_style"
            android:layout_height="30dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/txt_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/diagnosis" />

        <AutoCompleteTextView
            android:id="@+id/diagnosis"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:background="@drawable/rect_ip_style"
            android:layout_height="30dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/txt_surgery"
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/surgery" />

        <EditText
            android:id="@+id/surgery"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rect_ip_style"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/txt_precautions"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"

            android:textColor="#000"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/precautions"/>

        <EditText
            android:id="@+id/precautions"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:background="@drawable/rect_ip_style"
            android:layout_height="30dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="text" />
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:id="@+id/txt_physio"
            android:textColor="#000"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/physio"/>
        <EditText
            android:id="@+id/physio"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:background="@drawable/rect_ip_style"
            android:layout_height="30dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="text" />



        <TextView
            android:id="@+id/txt_physio_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/physio_details" />

        <EditText
            android:id="@+id/physio_details"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:background="@drawable/rect_ip_style"
            android:layout_height="30dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/treatment_next"
            android:layout_width="300dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:text="@string/button_next"
            android:background="@drawable/button_style"
            />


    </LinearLayout>
</ScrollView>