<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Get_started">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:text="@string/app_name"

            android:id="@+id/textView2"
            android:textColor="#E0780F"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_add_24"/>



    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="Your personal gait assistant"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_bg">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="330dp"
            android:textSize="22dp"
            android:gravity="fill_vertical"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/welcome_msg" />

        <!--ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" /-->
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:textColor="#e87723"
        android:textSize="26dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/welcome_msg" />

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:text="@string/Intro_msg1" />
    <TextView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:textSize="18dp"

        android:text="@string/Intro_msg2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:background="@drawable/button_style"
        android:layout_gravity="center"
        android:text="@string/start_button" />


</LinearLayout>